--- a/crommunity/static/scss/components/_post.scss
+++ b/crommunity/static/scss/components/_post.scss
@@ -122,6 +122,12 @@
     list-style-position: inside;
   }
 
+  hr {
+    margin: 1rem 0;
+    border: 0;
+    border-top: 1px solid $border-color;
+  }
+
   pre code {
     font-size: 1rem;
   }
